--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 __pycache__
 *.db
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
